--- a/components/Section-I/main.tex
+++ b/components/Section-I/main.tex
@@ -1,10 +1,8 @@
 
 \newpage
 
-
-
-\section{\textbf{LỜI MỞ ĐẦU}
-}
+\section*{\textbf{LỜI MỞ ĐẦU}}
+\addcontentsline{toc}{section}{LỜI MỞ ĐẦU}
 Trong thời đại công nghệ số phát triển mạnh mẽ, mạng xã hội đã trở thành một phần không thể thiếu trong đời sống con người. Các nền tảng như Facebook, Twitter, Instagram hay Threads của Meta giúp kết nối hàng triệu người dùng trên toàn thế giới, hỗ trợ giao tiếp, chia sẻ thông tin và mở rộng cơ hội kinh doanh.
 
 Threads, một nền tảng mới của Meta, được thiết kế để tối ưu hóa khả năng tương tác nhanh chóng, đơn giản hóa trải nghiệm chia sẻ nội dung dưới dạng văn bản, hình ảnh và video. Với sự thành công ban đầu của Threads, ý tưởng xây dựng một nền tảng mạng xã hội tương tự giúp sinh viên hiểu rõ hơn về cách phát triển một hệ thống mạng xã hội từ đầu, ứng dụng công nghệ hiện đại và tối ưu hóa hiệu suất.
