--- a/components/Section-V/main.tex
+++ b/components/Section-V/main.tex
@@ -1,5 +1,5 @@
 \newpage
-\section{\textbf{CHƯƠNG 3: Phân tích thiết kế hệ thống}}
+\section{\textbf{Phân tích thiết kế hệ thống}}
 
 \subsection{Phân Tích Hệ Thống}
 
