--- a/components/Section-VII/main.tex
+++ b/components/Section-VII/main.tex
@@ -1,6 +1,6 @@
 
 \newpage
-\section{\textbf{CHƯƠNG 5: KẾT QUẢ THỰC NGHIỆM}}
+\section{\textbf{KẾT QUẢ THỰC NGHIỆM}}
 
 \textbf{1. Hệ thống kiểm duyệt nội dung đa phương thức}
 
