--- a/components/reference.tex
+++ b/components/reference.tex
@@ -1,5 +1,6 @@
 \clearpage
-\section{TÀI LIỆU THAM KHẢO}
+\section*{TÀI LIỆU THAM KHẢO}
+\addcontentsline{toc}{section}{TÀI LIỆU THAM KHẢO}
 \begin{thebibliography}{00}
 
 \bibitem{aws-doc}
