--- a/components/Section-II/main.tex
+++ b/components/Section-II/main.tex
@@ -1,8 +1,8 @@
 
 \newpage
 
-\section{\textbf{LỜI CAM ĐOAN}
-}
+\section*{\textbf{LỜI CAM ĐOAN}}
+\addcontentsline{toc}{section}{LỜI CAM ĐOAN}
 
 Nhóm chúng em xin cam đoan rằng đồ án \textbf{“Xây dựng website mạng xã hội Honey”} là kết quả nghiên cứu và thực hiện của tất cả thành viên, dưới sự hướng dẫn của giảng viên \textbf{Trần Văn Hùng}.
 
